@@ -53,7 +53,7 @@ function Client(url, opts) {
 }
 
 /** @constant HaveAPI.Client.Version */
-Client.Version = '0.5.2';
+Client.Version = '0.6.0';
 
 /** @constant HaveAPI.Client.ProtocolVersion */
 Client.ProtocolVersion = '1.0';
@@ -81,6 +81,14 @@ Client.Exceptions = {};
  * @param {HaveAPI.Client} client
  * @param {Boolean} status
  * @param {Object} versions
+ */
+
+/**
+ * Action call parameters
+ * @typedef {Object} HaveAPI.Client~ActionCall
+ * @property {Object} params - Input parameters
+ * @property {Object} meta - Input meta parameters
+ * @property {HaveAPI.Client~replyCallback} onReply - called when the API responds
  */
 
 /**
@@ -342,71 +350,77 @@ Client.prototype.logout = function(callback) {
  * Always calls the callback with {@link HaveAPI.Client.Response} object. It does
  * not interpret the response.
  * @method HaveAPI.Client#directInvoke
- * @param {HaveAPI.Client~replyCallback} callback
+ * @param {HaveAPI.Client.Action} action
+ * @param {HaveAPI.Client~ActionCall} opts
  */
-Client.prototype.directInvoke = function(action, params, callback) {
+Client.prototype.directInvoke = function(action, opts) {
 	if (this._private.debug > 5)
-		console.log("Executing", action, "with params", params, "at", action.preparedUrl);
+		console.log("Executing", action, "with opts", opts, "at", action.preparedUrl);
 
 	var that = this;
 
-	var opts = {
+	var httpOpts = {
 		method: action.httpMethod(),
 		url: this._private.url + action.preparedUrl,
 		credentials: this.authProvider.credentials(),
 		headers: this.authProvider.headers(),
 		queryParameters: this.authProvider.queryParameters(),
 		callback: function(status, response) {
-			if(callback !== undefined) {
-				callback(that, new Client.Response(action, response));
+			if(opts.onReply !== undefined) {
+				opts.onReply(that, new Client.Response(action, response));
 			}
 		}
 	};
 
-	var paramsInQuery = this.sendAsQueryParams(opts.method);
-	var meta = null;
+	var paramsInQuery = this.sendAsQueryParams(httpOpts.method);
 	var metaNs = this.apiSettings.meta.namespace;
 
-	if (params && params.hasOwnProperty('meta')) {
-		meta = params.meta;
-		delete params.meta;
-	}
-
 	if (paramsInQuery) {
-		opts.url = this.addParamsToQuery(opts.url, action.namespace('input'), params);
+		httpOpts.url = this.addParamsToQuery(
+			httpOpts.url,
+			action.namespace('input'),
+			opts.params
+		);
 
-		if (meta)
-			opts.url = this.addParamsToQuery(opts.url, metaNs, meta);
+		if (opts.meta) {
+			httpOpts.url = this.addParamsToQuery(
+				httpOpts.url,
+				metaNs,
+				opts.meta
+			);
+		}
 
 	} else {
 		var scopedParams = {};
-		scopedParams[ action.namespace('input') ] = params;
+		scopedParams[ action.namespace('input') ] = opts.params;
 
-		if (meta)
-			scopedParams[metaNs] = meta;
+		if (opts.meta)
+			scopedParams[metaNs] = opts.meta;
 
-		opts.params = scopedParams;
+		httpOpts.params = scopedParams;
 	}
 
-	this._private.http.request(opts);
+	this._private.http.request(httpOpts);
 };
 
 /**
  * The response is interpreted and if the layout is object or object_list, ResourceInstance
  * or ResourceInstanceList is returned with the callback.
  * @method HaveAPI.Client#invoke
- * @param {HaveAPI.Client~replyCallback} callback
+ * @param {HaveAPI.Client.Action} action
+ * @param {HaveAPI.Client~ActionCall} opts
  */
-Client.prototype.invoke = function(action, params, callback) {
+Client.prototype.invoke = function(action, opts) {
 	var that = this;
+	var origOnReply = opts.onReply;
 
-	this.directInvoke(action, params, function(status, response) {
-		if (callback === undefined)
+	opts.onReply = function (status, response) {
+		if (origOnReply === undefined)
 			return;
 
 		switch (action.layout('output')) {
 			case 'object':
-				callback(that, new Client.ResourceInstance(
+				origOnReply(that, new Client.ResourceInstance(
 					that,
 					action.resource._private.parent,
 					action,
@@ -415,13 +429,15 @@ Client.prototype.invoke = function(action, params, callback) {
 				break;
 
 			case 'object_list':
-				callback(that, new Client.ResourceInstanceList(that, action, response));
+				origOnReply(that, new Client.ResourceInstanceList(that, action, response));
 				break;
 
 			default:
-				callback(that, response);
+				origOnReply(that, response);
 		}
-	});
+	};
+
+	this.directInvoke(action, opts);
 };
 
 /**
@@ -1081,21 +1097,36 @@ Action.prototype.provideUrl = function(url) {
 /**
  * Invoke the action.
  * This method has a variable number of arguments. Arguments are first applied
- * as object IDs in action URL. When there are no more URL parameters to fill,
- * the second last argument is an Object containing parameters to be sent.
- * The last argument is a {@link HaveAPI.Client~replyCallback} callback function.
+ * as object IDs in action URL. Then there are two ways in which input parameters
+ * can and other options be given to the action.
  *
- * The argument with parameters may be omitted, if the callback function
- * is in its place.
+ * The new-style is to pass {@link HaveAPI.Client~ActionCall} object that contains
+ * input parameters, meta parameters and callbacks.
+ *
+ * The old-style, is to pass an object with parameters (meta parameters are passed
+ * within this object) and the second argument is {@link HaveAPI.Client~replyCallback}
+ * callback function.  The argument with parameters may be omitted if there aren't any,
+ * making the callback function the only additional argument.
  *
  * Arguments do not have to be passed to this method specifically. They may
  * be given to the resources above, the only thing that matters is their correct
  * order.
  *
  * @example
- * // Call with parameters and a callback.
+ * // Call with parameters and a callback (new-style).
  * // The first argument '1' is a VPS ID.
- * api.vps.ip_address.list(1, {limit: 5}, function(c, reply) {
+ * api.vps.ip_address.list(1, {
+ *   params: {limit: 5},
+ *   meta: {count: true},
+ *   onReply: function(c, reply) {
+ * 		console.log("Got", reply.response());
+ *   }
+ * });
+ *
+ * @example
+ * // Call with parameters and a callback (old-style).
+ * // The first argument '1' is a VPS ID.
+ * api.vps.ip_address.list(1, {limit: 5, meta: {count: true}}, function(c, reply) {
  * 		console.log("Got", reply.response());
  * });
  *
@@ -1124,7 +1155,11 @@ Action.prototype.invoke = function() {
 		return;
 	}
 
-	this.client.invoke(this, prep.params.params, prep.callback);
+	this.client.invoke(this, {
+		params: prep.params.params,
+		meta: prep.meta,
+		onReply: prep.onReply
+	});
 };
 
 /**
@@ -1146,7 +1181,11 @@ Action.prototype.directInvoke = function() {
 		return;
 	}
 
-	this.client.directInvoke(this, prep.params.params, prep.callback);
+	this.client.directInvoke(this, {
+		params: prep.params.params,
+		meta: prep.meta,
+		onReply: prep.onReply
+	});
 };
 
 /**
@@ -1162,6 +1201,7 @@ Action.prototype.prepareInvoke = function(new_args) {
 	if (!this.preparedUrl)
 		this.preparedUrl = this.description.url;
 
+	// First, apply ids returned from the API
 	for (var i = 0; i < this.providedIdArgs.length; i++) {
 		if (this.preparedUrl.search(rx) == -1)
 			break;
@@ -1169,6 +1209,7 @@ Action.prototype.prepareInvoke = function(new_args) {
 		this.preparedUrl = this.preparedUrl.replace(rx, this.providedIdArgs[i]);
 	}
 
+	// Apply ids passed as arguments
 	while (args.length > 0) {
 		if (this.preparedUrl.search(rx) == -1)
 			break;
@@ -1186,38 +1227,126 @@ Action.prototype.prepareInvoke = function(new_args) {
 	}
 
 	var that = this;
-	var hasParams = args.length > 0;
-	var isFn = hasParams && args.length == 1 && typeof(args[0]) == "function";
-	var rawParams = hasParams && !isFn ? args[0] : null;
+	var params = this.prepareParams(args);
 
-	if (this.layout('input') == 'object') {
+	console.log('prepared params', params);
+
+	// Add default parameters from object instance
+	if (this.layout('input') === 'object') {
 		var defaults = this.resource.defaultParams(this);
 
 		for (var param in this.description.input.parameters) {
-			if ( defaults.hasOwnProperty(param) && (!rawParams || (rawParams && !rawParams.hasOwnProperty(param))) ) {
-				if (!rawParams)
-					rawParams = {};
+			if ( defaults.hasOwnProperty(param) && (
+					 !params.params || (params.params && !params.params.hasOwnProperty(param))
+				 )) {
+				if (!params.params)
+					params.params = {};
 
-				rawParams[ param ] = defaults[ param ];
+				params.params[ param ] = defaults[ param ];
 			}
 		}
 	}
-
-	var params = new Parameters(this, rawParams);
 
 	return {
-		params: params,
-		callback: function(c, response) {
+		params: new Parameters(this, params.params),
+		meta: params.meta,
+		onReply: function(c, response) {
 			that.preparedUrl = null;
 
-			if (args.length > 1) {
-				args[1](c, response);
-
-			} else if(isFn) {
-				args[0](c, response);
-			}
+			if (params.onReply)
+				params.onReply(c, response);
 		}
 	}
+};
+
+/**
+ * Determine what kind of a call type was used and return parameters
+ * in a unified object.
+ * @private
+ * @method HaveAPI.Client.Action#prepareParams
+ * @param {Array} mix of input parameters and callbacks
+ * @return {Object}
+ */
+Action.prototype.prepareParams = function (args) {
+	if (!args.length)
+		return {};
+
+	if (args.length == 1 && (args[0].params || args[0].onReply)) {
+		// Parameters passed in an object
+		var opts = args[0];
+
+		return {
+			params: opts.params,
+			meta: opts.meta,
+			onReply: opts.onReply,
+		};
+	}
+
+	// One parameter is passed, it can be old-style hash of parameters or a callback
+	if (args.length == 1) {
+		if (typeof(args[0]) === 'function') {
+			// The one parameter is a callback -- no input parameters given
+			return {onReply: args[0]};
+		}
+
+		var params = this.separateMetaParams(args[0]);
+
+		return {
+			params: params.params,
+			meta: params.meta
+		};
+
+		var ret = {};
+
+		if (opts.meta) {
+			ret.meta = opts.meta;
+			delete opts.meta;
+		}
+
+		ret.params = opts;
+
+		return ret;
+	}
+
+	// Two or more parameters are passed. The first is a hash of parameters, the second
+	// is a callback. The rest is ignored.
+	var params = this.separateMetaParams(args[0]);
+
+	return {
+		params: params.params,
+		meta: params.meta,
+		onReply: args[1]
+	};
+};
+
+/**
+ * Extract meta parameters from `params` and return and object with keys
+ * `params` (action's input parameters) and `meta` (action's input meta parameters).
+ *
+ * @private
+ * @method HaveAPI.Client.Action#separateMetaParams
+ * @param {Object} action's input parameters, meta parameters may be present
+ * @return {Object}
+ */
+Action.prototype.separateMetaParams = function (params) {
+	var ret = {};
+
+	for (var k in params) {
+		if (!params.hasOwnProperty(k))
+			continue;
+
+		if (k === 'meta') {
+			ret.meta = params[k];
+
+		} else {
+			if (!ret.params)
+				ret.params = {};
+
+			ret.params[k] = params[k];
+		}
+	}
+
+	return ret;
 };
 
 /**
@@ -1736,9 +1865,6 @@ function Parameters (action, params) {
 Parameters.prototype.coerceParams = function (params) {
 	var ret = {};
 	var input = this.action.description.input.parameters;
-
-	if (params && params.hasOwnProperty('meta'))
-		ret.meta = params.meta;
 
 	for (var p in params) {
 		if (!params.hasOwnProperty(p) || !input.hasOwnProperty(p))
