@@ -1,3 +1,5 @@
+- Action parameters and callbacks can be passed in an object
+
 * Tue Oct 18 2016 - version 0.6.0
 - Client.availableVersions: fix callback arguments
 - Client.resources and BaseResource.resources contain objects
